Adding user managment and some docs
